
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int type ;
struct sysctl_oid {int dummy; } ;
struct sysctl_ctx_list {int dummy; } ;
struct smusat_softc {int sc_nsensors; struct smu_sensor* sc_sensors; scalar_t__ sc_last_update; } ;
struct TYPE_2__ {char zone; char* name; int target_temp; int max_temp; int (* read ) (struct pmac_therm*) ;} ;
struct smu_sensor {char reg; scalar_t__ type; TYPE_1__ therm; int dev; } ;
typedef scalar_t__ phandle_t ;
typedef int device_t ;


 int CTLFLAG_MPSAFE ;
 int CTLFLAG_RD ;
 int CTLTYPE_INT ;
 int M_SMUSAT ;
 int M_WAITOK ;
 int M_ZERO ;
 scalar_t__ OF_child (int ) ;
 int OF_getprop (scalar_t__,char*,char*,int) ;
 scalar_t__ OF_peer (scalar_t__) ;
 int OID_AUTO ;
 scalar_t__ SMU_CURRENT_SENSOR ;
 scalar_t__ SMU_POWER_SENSOR ;
 scalar_t__ SMU_TEMP_SENSOR ;
 scalar_t__ SMU_VOLTAGE_SENSOR ;
 int SYSCTL_ADD_PROC (struct sysctl_ctx_list*,int ,int ,char*,int,int ,int,int ,char*,char*) ;
 int SYSCTL_CHILDREN (struct sysctl_oid*) ;
 struct smusat_softc* device_get_softc (int ) ;
 struct sysctl_ctx_list* device_get_sysctl_ctx (int ) ;
 struct sysctl_oid* device_get_sysctl_tree (int ) ;
 int device_printf (int ,char*) ;
 scalar_t__ isspace (char) ;
 struct smu_sensor* malloc (int,int ,int) ;
 int ofw_bus_get_node (int ) ;
 int pmac_thermal_sensor_register (TYPE_1__*) ;
 scalar_t__ smusat_sensor_read ;
 int smusat_sensor_sysctl ;
 int sprintf (char*,char*,char*,char const*) ;
 scalar_t__ strcmp (char*,char*) ;
 int strlen (char*) ;
 char tolower (char) ;

__attribute__((used)) static int
smusat_attach(device_t dev)
{
 phandle_t child;
 struct smu_sensor *sens;
 struct smusat_softc *sc;
 struct sysctl_oid *sensroot_oid;
 struct sysctl_ctx_list *ctx;
 char type[32];
 int i;

 sc = device_get_softc(dev);
 sc->sc_nsensors = 0;
 sc->sc_last_update = 0;

 for (child = OF_child(ofw_bus_get_node(dev)); child != 0;
     child = OF_peer(child))
  sc->sc_nsensors++;

 if (sc->sc_nsensors == 0) {
  device_printf(dev, "WARNING: No sensors detected!\n");
  return (-1);
 }

 sc->sc_sensors = malloc(sc->sc_nsensors * sizeof(struct smu_sensor),
     M_SMUSAT, M_WAITOK | M_ZERO);

 sens = sc->sc_sensors;
 sc->sc_nsensors = 0;

 ctx = device_get_sysctl_ctx(dev);
 sensroot_oid = device_get_sysctl_tree(dev);

 for (child = OF_child(ofw_bus_get_node(dev)); child != 0;
     child = OF_peer(child)) {
  char sysctl_name[40], sysctl_desc[40];
  const char *units;

  sens->dev = dev;
  sens->reg = 0;
  OF_getprop(child, "reg", &sens->reg, sizeof(sens->reg));
  if (sens->reg < 0x30)
   continue;
  sens->reg -= 0x30;

  OF_getprop(child, "zone", &sens->therm.zone, sizeof(int));
  OF_getprop(child, "location", sens->therm.name,
      sizeof(sens->therm.name));

  OF_getprop(child, "device_type", type, sizeof(type));

  if (strcmp(type, "current-sensor") == 0) {
   sens->type = SMU_CURRENT_SENSOR;
   units = "mA";
  } else if (strcmp(type, "temp-sensor") == 0) {
   sens->type = SMU_TEMP_SENSOR;
   units = "C";
  } else if (strcmp(type, "voltage-sensor") == 0) {
   sens->type = SMU_VOLTAGE_SENSOR;
   units = "mV";
  } else if (strcmp(type, "power-sensor") == 0) {
   sens->type = SMU_POWER_SENSOR;
   units = "mW";
  } else {
   continue;
  }

  for (i = 0; i < strlen(sens->therm.name); i++) {
   sysctl_name[i] = tolower(sens->therm.name[i]);
   if (isspace(sysctl_name[i]))
    sysctl_name[i] = '_';
  }
  sysctl_name[i] = 0;

  sprintf(sysctl_desc,"%s (%s)", sens->therm.name, units);
  SYSCTL_ADD_PROC(ctx, SYSCTL_CHILDREN(sensroot_oid), OID_AUTO,
      sysctl_name, CTLTYPE_INT | CTLFLAG_RD | CTLFLAG_MPSAFE, dev,
      sc->sc_nsensors, smusat_sensor_sysctl,
      (sens->type == SMU_TEMP_SENSOR) ? "IK" : "I", sysctl_desc);

  if (sens->type == SMU_TEMP_SENSOR) {

   sens->therm.target_temp = 500 + 2731;
   sens->therm.max_temp = 900 + 2731;
   sens->therm.read =
       (int (*)(struct pmac_therm *))smusat_sensor_read;
   pmac_thermal_sensor_register(&sens->therm);
  }

  sens++;
  sc->sc_nsensors++;
 }

 return (0);
}
